// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RoutesTable /> Renders the table with line data 1`] = `
<DocumentFragment>
  <table
    class="h-1 w-full "
    data-testid="routesTable1"
  >
    <tbody>
      <tr
        class="border border-light-grey "
      >
        <td
          class="border-l-10 border-hsl-dark-green w-20 p-4 align-top"
        />
        <td
          class="py-4"
        >
          <a
            href="/lines/101f800c-39ed-4d85-8ece-187cd9fe1c5e"
          >
            <div
              class="flex flex-row items-center"
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <p
                  class="text-3xl"
                >
                  65
                </p>
                <p>
                  Rautatientori - Veräjälaakso
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-20 p-6 align-middle"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:border-2 hover:border-tweaked-brand  "
            data-testid="LineTableRow::showLineRoutes"
            type="button"
          >
            <svg
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        class="border border-light-grey "
      >
        <td
          class="border-l-10 border-hsl-dark-green w-20 p-4 align-top"
        />
        <td
          class="py-4"
        >
          <a
            href="/lines/9058c328-efdd-412c-9b2b-37b0f6a2c6fb"
          >
            <div
              class="flex flex-row items-center"
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <p
                  class="text-3xl"
                >
                  71
                </p>
                <p>
                  Rautatientori - Malmi as.
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-20 p-6 align-middle"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:border-2 hover:border-tweaked-brand  "
            data-testid="LineTableRow::showLineRoutes"
            type="button"
          >
            <svg
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        class="border border-light-grey "
      >
        <td
          class="border-l-10 border-hsl-dark-green w-20 p-4 align-top"
        />
        <td
          class="py-4"
        >
          <a
            href="/lines/bbd1cb29-74c3-4fa1-ac86-918d7fa96fe2"
          >
            <div
              class="flex flex-row items-center"
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <p
                  class="text-3xl"
                >
                  785K
                </p>
                <p>
                  Rautatientori - Nikkilä
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-20 p-6 align-middle"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:border-2 hover:border-tweaked-brand  "
            data-testid="LineTableRow::showLineRoutes"
            type="button"
          >
            <svg
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
    <tbody>
      <tr
        class="border border-light-grey "
      >
        <td
          class="border-l-10 border-hsl-dark-green w-20 p-4 align-top"
        />
        <td
          class="py-4"
        >
          <a
            href="/lines/db748c5c-42e3-429f-baa0-e0db227dc2c8"
          >
            <div
              class="flex flex-row items-center"
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <p
                  class="text-3xl"
                >
                  1234
                </p>
                <p>
                  Erottaja - Arkkadiankatu
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-20 p-6 align-middle"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:border-2 hover:border-tweaked-brand  "
            data-testid="LineTableRow::showLineRoutes"
            type="button"
          >
            <svg
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`<RoutesTable /> Renders the table with route data 1`] = `
<DocumentFragment>
  <table
    class="h-1 w-full "
    data-testid="routesTable1"
  >
    <tbody>
      <tr
        class="border border-light-grey "
      >
        <td
          class="border-l-10 border-hsl-dark-green w-20 p-4 align-top"
        />
        <td
          class="py-4"
        >
          <a
            href="/lines/101f800c-39ed-4d85-8ece-187cd9fe1c5e"
          >
            <div
              class="flex flex-row items-center"
            >
              <div
                class="flex flex-col w-1/2 font-bold"
              >
                <p
                  class="text-2xl"
                >
                  1
                </p>
                <p>
                  route 1
                </p>
              </div>
              <div
                class="flex flex-col w-1/2 text-right"
              >
                <p
                  class="font-bold"
                >
                  Voimassa 1.1.1970 - 31.12.2050
                </p>
                <p>
                  !Muokattu dd.mm.yyyy hh:mm | S. Suunnittelija
                </p>
              </div>
            </div>
          </a>
        </td>
        <td
          class="w-20 p-6 align-middle"
        >
          <button
            class="text-center h-10 w-10 rounded-full border border-grey bg-white text-tweaked-brand hover:border-2 hover:border-tweaked-brand !bg-background opacity-70 pointer-events-none "
            data-testid="RouteTableRow::showRoute"
            disabled=""
            type="button"
          >
            <svg
              class="text-2xl inline text-center"
              fill="currentColor"
              height="1em"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M18 8c0-3.31-2.69-6-6-6S6 4.69 6 8c0 4.5 6 11 6 11s6-6.5 6-11zm-8 0c0-1.1.9-2 2-2s2 .9 2 2a2 2 0 11-4 0zM5 20v2h14v-2H5z"
              />
            </svg>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
